--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -60,6 +60,6 @@ jobs:
         uses: "docker/build-push-action@v5"
         with:
           context: .
-          file: docker/prod.Dockerfile
           push: true
-          tags: ${{ secrets.DOCKER_USERNAME }}/${{ env.APP_NAME }}:${{ github.ref_name }}
+          tags: |
+              ${{ secrets.DOCKER_USERNAME }}/${{ env.APP_NAME }}:${{ needs.tag-and-release.outputs.new_tag }}
